--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                             <h3>John Carter</h3>
                         </div>
                         <div class="wifisvg">
-                            <img src="wifi-svgrepo-com.svg" alt="wifi" />
+                            <img src="./wifi-svgrepo-com.svg" alt="wifi" />
                         </div>
                     </div>
                     <div class="cardno">
@@ -213,7 +213,7 @@
                         </div>
                     </div>
                     <div class="visasvg">
-                        <img src="visa-svgrepo-com.svg" alt="VISA" />
+                        <img src="./visa-svgrepo-com.svg" alt="VISA" />
                     </div>
                 </div>
                 <div class="card">
@@ -222,7 +222,7 @@
                             <h3>John Carter</h3>
                         </div>
                         <div class="wifisvg">
-                            <img src="wifi-svgrepo-com.svg" alt="wifi" />
+                            <img src="./wifi-svgrepo-com.svg" alt="wifi" />
                         </div>
                     </div>
                     <div class="cardno">
@@ -240,7 +240,7 @@
                         </div>
                     </div>
                     <div class="visasvg">
-                        <img src="visa-svgrepo-com.svg" alt="VISA" />
+                        <img src="./visa-svgrepo-com.svg" alt="VISA" />
                     </div>
                 </div>
                 <div class="card right">
@@ -249,7 +249,7 @@
                             <h3>John Carter</h3>
                         </div>
                         <div class="wifisvg">
-                            <img src="wifi-svgrepo-com.svg" alt="wifi" />
+                            <img src="./wifi-svgrepo-com.svg" alt="wifi" />
                         </div>
                     </div>
                     <div class="cardno">
@@ -267,7 +267,7 @@
                         </div>
                     </div>
                     <div class="visasvg">
-                        <img src="visa-svgrepo-com.svg" alt="VISA" />
+                        <img src="./visa-svgrepo-com.svg" alt="VISA" />
                     </div>
                 </div>
             </div>
